Fix footer slogan spacing

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -1678,6 +1678,11 @@ p {
 .f-text {
   color: var(--text_bright);
   padding: 5px;
+  margin: 0px;
+}
+
+.f-text-lower {
+  margin-bottom: 10px;
 }
 
 /* Forms */
